# raftKVStorage

./: .gitignore  CMakeLists.txt  README.md  kaifa.md
docs/: detail.md  kaifa.md  kuozhan.md  readRaft.md  use.md
example/rpc/: CMakeLists.txt  rpc_callee.cpp  rpc_caller.cpp
example/timer/: timer_task.cpp
include/common/: utils.h
include/fiber/: fiber.hpp  fiber.md  noncopyable.hpp  singleton.hpp
include/raft/raftClerk/: clerk.h
include/raft/raftCore/: kv_server.h  log_entry.h  raft_log.h  raft_node.h  raft_rpc.h  state_machine.h  timer.h
include/raft/storage/: kv_server.h  persistent_storage.h
include/rpc/: rpcchannel.h  rpccontroller.h  rpcprovider.h
proto/: friend.proto  raft.proto  raftRpc.proto  raftstate.proto  server.proto
src/: CMakeLists.txt  main.cpp
src/proto/: rpcheader.proto
src/raft/: CMakeLists.txt
src/raft/raftClerk/: CMakeLists.txt  clerk.cpp  main.cpp
src/raft/raftCore/: CMakeLists.txt  kv_server.cpp  log_entry.cpp  raft_log.cpp  raft_node.cpp
src/raft/storage/: persistent_storage.cpp
src/rpc/: CMakeLists.txt  rpcchannel.cpp  rpccontroller.cpp  rpcprovider.cpp
